// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legend Component Styling Device: desktop Size: large Bold: false 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  size="large"
>
  <styled.legend
    $bold={false}
    $size="large"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: desktop Size: large Bold: true 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 1.5rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  size="large"
>
  <styled.legend
    $bold={true}
    $size="large"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: desktop Size: medium Bold: false 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 1.25rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  size="medium"
>
  <styled.legend
    $bold={false}
    $size="medium"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: desktop Size: medium Bold: true 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 1.25rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  size="medium"
>
  <styled.legend
    $bold={true}
    $size="medium"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: desktop Size: small Bold: false 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  size="small"
>
  <styled.legend
    $bold={false}
    $size="small"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: desktop Size: small Bold: true 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  size="small"
>
  <styled.legend
    $bold={true}
    $size="small"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: desktop Size: xsmall Bold: false 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  size="xsmall"
>
  <styled.legend
    $bold={false}
    $size="xsmall"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: desktop Size: xsmall Bold: true 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  size="xsmall"
>
  <styled.legend
    $bold={true}
    $size="xsmall"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: desktop Size: xxsmall Bold: false 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  size="xxsmall"
>
  <styled.legend
    $bold={false}
    $size="xxsmall"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: desktop Size: xxsmall Bold: true 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  size="xxsmall"
>
  <styled.legend
    $bold={true}
    $size="xxsmall"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: mobile Size: large Bold: false 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  size="large"
>
  <styled.legend
    $bold={false}
    $size="large"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: mobile Size: large Bold: true 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 1.5rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  size="large"
>
  <styled.legend
    $bold={true}
    $size="large"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: mobile Size: medium Bold: false 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 1.25rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  size="medium"
>
  <styled.legend
    $bold={false}
    $size="medium"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: mobile Size: medium Bold: true 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 1.25rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  size="medium"
>
  <styled.legend
    $bold={true}
    $size="medium"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: mobile Size: small Bold: false 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  size="small"
>
  <styled.legend
    $bold={false}
    $size="small"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: mobile Size: small Bold: true 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  size="small"
>
  <styled.legend
    $bold={true}
    $size="small"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: mobile Size: xsmall Bold: false 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  size="xsmall"
>
  <styled.legend
    $bold={false}
    $size="xsmall"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: mobile Size: xsmall Bold: true 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  size="xsmall"
>
  <styled.legend
    $bold={true}
    $size="xsmall"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: mobile Size: xxsmall Bold: false 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  size="xxsmall"
>
  <styled.legend
    $bold={false}
    $size="xxsmall"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Styling Device: mobile Size: xxsmall Bold: true 1`] = `
.c0 {
  color: #1B1C1E;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  size="xxsmall"
>
  <styled.legend
    $bold={true}
    $size="xxsmall"
    datatest-id="legend"
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;
